added additional observation for cloudiness

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -7265,7 +7265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -8088,7 +8088,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Observations:\n",
@@ -8106,7 +8106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -8933,7 +8933,8 @@
    "metadata": {},
    "source": [
     "Observations :\n",
-    "    1. Cloudiness is random, we can see 0 and 100% cloudiness on lattitudes varying from -40 towards 80"
+    "    1. Cloudiness is random, we can see 0 and 100% cloudiness on lattitudes varying from -40 towards 80\n",
+    "    2. I don't see much dependency of lattitude on cloudiness"
    ]
   },
   {
@@ -8945,7 +8946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -9779,6 +9780,13 @@
     "2. Most of the cities have wind speed concentrated between 0 and 10. \n",
     "3. I don't see much dependency of lattitude on windspeed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
